# ChangeLog for dev-java/maven-bin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/ChangeLog,v 1.57 2009/05/12 19:33:02 ali_bush Exp $

*maven-bin-3.0_alpha7 (15 Mar 2010)

  15 Mar 2010; Jesse Farinacci <jieryn@gmail.com>
  -maven-bin-3.0_alpha6.ebuild, +maven-bin-3.0_alpha7.ebuild:
  version bump;
  http://old.nabble.com/-ANN--Apache-Maven-3.0-alpha-7-Released-td27896285.h
  tml

*maven-bin-2.0.11 (26 Feb 2010)

  26 Feb 2010; Jesse Farinacci <jieryn@gmail.com> +maven-bin-2.0.11.ebuild:
  2.0.11 released, ANN: http://markmail.org/message/leue2ycjen2n6j6t

*maven-bin-3.0_alpha6 (11 Jan 2010)

  11 Jan 2010; Jesse Farinacci <jieryn@gmail.com>
  -maven-bin-3.0_alpha5.ebuild, +maven-bin-3.0_alpha6.ebuild:
  version bump, please see
  http://old.nabble.com/-ANN--Apache-Maven-3.0-alpha-6-Released-td27099189.h
  tml

  06 Dec 2009; Alistair Bush <ali_bush@gentoo.org>
  maven-bin-3.0_alpha5.ebuild:
  maven-bin is 1.5 compatible not 1.4

  02 Dec 2009; Jesse Farinacci <jieryn@gmail.com> -maven-bin-2.2.1.ebuild,
  maven-bin-3.0_alpha5.ebuild:
  fixing an $S problem, also removing 2.2.1 as that is in the proper tree

*maven-bin-3.0_alpha5 (02 Dec 2009)

  02 Dec 2009; Jesse Farinacci <jieryn@gmail.com>
  -maven-bin-3.0_alpha4.ebuild, +maven-bin-3.0_alpha5.ebuild:
  maven team pushed another alpha release to fix many bugs

*maven-bin-3.0_alpha4 (17 Nov 2009)

  17 Nov 2009; Jesse Farinacci <jieryn@gmail.com>
  -maven-bin-3.0_alpha3.ebuild, +maven-bin-3.0_alpha4.ebuild:
  maven team pushed a new alpha release to fix a couple of critical bugs

*maven-bin-3.0_alpha3 (15 Nov 2009)

  15 Nov 2009; Jesse Farinacci <jieryn@gmail.com>
  +maven-bin-3.0_alpha3.ebuild:
  adding 3.0-alpha-3.. please test! maven 3.0 will make a huge impact

*maven-bin-2.2.1 (11 Sep 2009)

  11 Sep 2009; Jesse Farinacci <jieryn@gmail.com> -maven-bin-2.2.0.ebuild,
  +maven-bin-2.2.1.ebuild:
  version bump to 2.2.1
