@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/maven-bin-2.0.10-r1.ebuild,v 1.2 2009/10/26 08:01:29 volkmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/maven-bin-2.1.0.ebuild,v 1.1 2009/05/12 19:33:02 ali_bush Exp $
 
 inherit java-pkg-2
 
@@ -8,18 +8,18 @@ MY_PN=apache-${PN%%-bin}
 MY_P="${MY_PN}-${PV}"
 
 DESCRIPTION="Project Management and Comprehension Tool for Java"
-SRC_URI="mirror://apache/maven/binaries/${MY_P}-bin.tar.bz2"
+SRC_URI="mirror://apache/maven/binaries/apache-maven-3.0-beta-1-bin.tar.gz"
 HOMEPAGE="http://maven.apache.org/"
 LICENSE="Apache-2.0"
-SLOT="2.0"
-KEYWORDS="~amd64 ~ppc ~x86"
+SLOT="3.0"
+KEYWORDS="~amd64 ~x86"
 
-RDEPEND=">=virtual/jdk-1.4
+RDEPEND=">=virtual/jdk-1.5
 	app-admin/eselect-maven"
 
 IUSE=""
 
-S="${WORKDIR}/${MY_P}"
+S="${WORKDIR}/apache-maven-3.0-beta-1"
 
 MAVEN=${PN}-${SLOT}
 MAVEN_SHARE="/usr/share/${MAVEN}"
@@ -28,6 +28,8 @@ src_unpack() {
 	unpack ${A}
 
 	rm -v "${S}"/bin/*.bat || die
+	chmod 644 "${S}"/boot/*.jar || die
+	chmod 644 "${S}"/lib/*.jar || die
 }
 
 # TODO we should use jars from packages, instead of what is bundled
