@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/ChangeLog,v 1.57 2009/05/12 19:33:02 ali_bush Exp $
 
+*maven-bin-3.0_beta1 (23 Apr 2010)
+
+  23 Apr 2010; Jesse Farinacci <jieryn@gmail.com> -maven-bin-2.0.11.ebuild,
+  -maven-bin-3.0_alpha7.ebuild, +maven-bin-3.0_beta1.ebuild:
+  maven 3.0-beta-1 released, see
+  http://maven.markmail.org/thread/wzrdmloit77vdmoz
+
 *maven-bin-3.0_alpha7 (15 Mar 2010)
 
   15 Mar 2010; Jesse Farinacci <jieryn@gmail.com>
